Separation of Toast Hook in two components, creation of dashboard component, connecting signup page with backend, some animations.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,9 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", {
+      "endOfLine": "auto"
+    }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "no-unused-expressions": "off",
